@@ -269,11 +269,13 @@ sp_dtw_whatever_changed(GtkAdjustment *adjustment, GtkWidget *dialog)
 /**
  *  \brief Exists to stop tabs from working until we just GTK 2.4+
  */
+/*
 gboolean text_stop_tab (GtkWidget * widget, GdkEventKey *event, gpointer user_data)
 {
     if ( event->keyval == GDK_Tab ) return TRUE;
     return FALSE;
 }
+*/
 
 /**
  *  \brief   Handles a dialog entry box changing and updates the XML
@@ -603,10 +605,10 @@ sp_doc_dialog_add_work_entity( struct rdf_work_entity_t * entity,
             gtk_widget_set_size_request (view, -1, 3);
             gtk_text_view_set_wrap_mode ( GTK_TEXT_VIEW (view), GTK_WRAP_WORD );
 // FIXME: available from GTK 2.4 on...
-//            gtk_text_view_set_accepts_tab ( GTK_TEXT_VIEW (view), FALSE );
+            gtk_text_view_set_accepts_tab ( GTK_TEXT_VIEW (view), FALSE );
 //          until then, just kill tabs...
-            g_signal_connect ( G_OBJECT (view), "key-press-event",
-                               G_CALLBACK (text_stop_tab), NULL );
+//            g_signal_connect ( G_OBJECT (view), "key-press-event",
+//                               G_CALLBACK (text_stop_tab), NULL );
 
             buf = gtk_text_view_get_buffer (GTK_TEXT_VIEW(view));
             // FIXME: looks like tool tips don't show up for GtkTextViews
